apps/external-services/endpoints.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: thelounge
  namespace: external-services
  labels:
    kubernetes.io/service-name: thelounge
addressType: IPv4
ports:
  - name: thelounge
    port: 9999
    protocol: TCP
endpoints:
  - addresses:
      - "192.168.0.210"

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin
  namespace: external-services
  labels:
    kubernetes.io/service-name: jellyfin
addressType: IPv4
ports:
  - name: jellyfin
    port: 8096
    protocol: TCP
endpoints:
  - addresses:
      - "192.168.0.135"
