apps/external-services/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: thelounge
spec:
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 9999
  clusterIP: None
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 8096
  clusterIP: None
  type: ClusterIP
